the_project/manifests/overlays/staging/project-ing-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ing
spec:
  rules:
    - http:
        paths:
          - path: /staging
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port:
                  number: 80
          - path: /staging/api
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 80
